# pygester

./: .gitignore  justfile  pixi.toml  pyproject.toml  readme.md  spec.md
admin/: todo.md
run/basic-test/: MANIFEST.md  context-packet.json  paper.md  technical-summary.md
runs/cortes-run/: MANIFEST.md  context-packet.json  paper.md  quality-report.json
runs/foffano-fe-on/: MANIFEST.md  context-packet.json
runs/foffano-run/: MANIFEST.md  context-packet.json  paper.md  quality-report.json
runs/slurm-foffano-true/: MANIFEST.md  (+1 more)
scripts/: 01-parse.py  02-clean.py  03-packet.py  build_context_packet.py  common.py  consolidate_text.py  cortes-fe-off.sh  cortes-fe-on.sh  enrich_structures.py  extract_artifacts.py  foffano-fe-off.sh  foffano-fe-on.sh  generate_summary.py  generate_translation.py  mishmast-fe-off.sh  mishmast-fe-on.sh  nikishin-fe-off.sh  nikishin-fe-on.sh  normalize.py  parse_pdf.py  process-pdf.py  process_pdf.py  qc-enrichment.sh  run-cortes-fe-off.sh  run-cortes-fe-on.sh  run-foffano-fe-off.sh  run-foffano-fe-on.sh  run-mishmast-fe-off.sh  run-mishmast-fe-on.sh  run-nikishin-fe-off.sh  run-nikishin-fe-on.sh  section_sanity.py
slurm/: cortes-fe-off.sh  cortes-fe-on.sh  foffano-fe-off.sh  mishmast-fe-off.sh  nikishin-fe-off.sh  test-enrichment-false.sh  test-enrichment-true.sh
spec/: alpha-code-review.md  beta-code-review.md  spec-enhancements-1.md  spec-enhancements-2.md  spec-enhancements-3.md  spec.md
src/: 01-parse.py  02-clean.py  03-packet.py  common.py  process-pdf.py  qc-enrichment.sh  requirements.txt
tests/: texify_test.py
(+74 files in other folders)
