[project]
name = "digest-technical-paper"
version = "0.1.0"
description = "Parse PDFs into clean markdown + structured context artifacts"
requires-python = ">=3.10,<3.13"
dependencies = [
  "docling>=2.91.0",
  "pymupdf>=1.24.0",
  "pydantic>=2.8.0",
  "orjson>=3.10.0",
]

[dependency-groups]
dev = [
  "pytest>=7.0.0",
]

[tool.uv]
package = false
